# ObsidianAIProcessor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: dev-builder.md  dev-planner.md  dev-prompt-author.md  dev-reviewer.md  dev-spec.md  dev-tester.md  dev-tracker.md
.claude/commands/: build.md  done.md  log.md  plan.md  review.md  spec.md  status.md  test.md
.claude/hooks/: capture_pytest.py  guard_vault_write.py  session_start.py  stop_gate.py  subagent_done.py
.claude/skills/: index-update-contract.md  provider-factory-pattern.md  verbatim-contract.md
.cursor/dev/: TRACKER.md  feature-initiation-prompts.md  lessons.md
.cursor/hooks/: capture_pytest.py  session_start.py  stop_gate.py
.cursor/rules/: session-and-hooks.mdc
.github/workflows/: ci.yml
ProgressTracking/: TRACKER.md  feature-initiation-prompts.md
ProgressTracking/runner/: run_tasks.py
ProgressTracking/specs/: adapters-base.md  anthropic-provider.md  archive-py.md  audio-adapter.md  config-py.md  embedder-py.md  feature-cli-entry-point.md  feature-foundations.md  feature-llm-provider-layer.md  feature-pipeline-stages.md  feature-scheduled-tasks.md  feature-setup-scripts.md  feature-source-adapters.md  feature-tests.md  feature-tool-prompt-files.md  feature-vault-layer.md  feature-vector-store.md  foundations.md  index-updater.md  llm-base.md  lmstudio-provider.md  main-py.md  markdown-adapter.md  models-py.md  note-py.md  ollama-provider.md  openai-provider.md  outdated-review.md  pdf-adapter.md  pipeline-py.md  prompt-classify.md  prompt-extract_entities.md  prompt-extract_verbatim.md  prompt-loader.md  prompt-suggest_tags.md  prompt-summarize.md  provider-factory.md  pyproject-scaffold.md  reference-linker.md  references-py.md  (+25 more)
ProgressTracking/tasks/: 01_foundations.md  02_source-adapters.md  03_llm-provider-layer.md  04_tool-prompt-files.md  05_vault-layer.md  06_pipeline-stages.md  07_scheduled-tasks.md  08_vector-store.md  09_cli-entry-point.md  10_setup-scripts.md  11_tests.md
agent/: __main__.py  main.py
agent/adapters/: audio_adapter.py  base.py  (+6 more)
docs/: DEVELOPMENT.md  architecture.md  requirements.md
prompts/: classify.md  extract_entities.md  extract_verbatim.md  suggest_tags.md  summarize.md
runner/: run_tasks.py
scripts/: install.ps1  install.sh  reindex.py  run-process-inbox.ps1  schedule-inbox-linux.example.sh  schedule-inbox-windows.ps1  setup_vault.py
(+139 files in other folders)
